--- a/app/views/admin/bantuan/kategori.html
+++ b/app/views/admin/bantuan/kategori.html
@@ -54,7 +54,7 @@
                                     <?php if ($list_kategori->blokir == 1) {
                                                     $class = 'bg-danger'; $status = 'Diblok';
                                                 } else {
-                                                    $class = 'bg-success'; $status = 'Aktif';
+                                                    $class = 'bg-success'; $status = 'Normal';
                                                 } ?>
                                     <i class="<?= $class; ?> m-0 ml-1"></i>
                                     <span class="status small">
