perbaikan terhadap file donatur.html => menghilangkan fungsi search, menambahkan file pojok berbagi style dan secript pada constrack controller dan admin style dan script untuk rute admin dan donatur, mengubah file index tagihan => tab pils dibuat felx between, menambahkan min height pada main.js untuk elsenya dan memperbaiki file index.html controler donasi => tampilan tombol dan text saat di mobile

--- a/app/views/admin/bantuan/data.html
+++ b/app/views/admin/bantuan/data.html
@@ -104,28 +104,22 @@
                             }
                         ?>
                     </tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="3">
-                                <div class="row align-items-center">
-                                    <div class="col">
-                                        <form>
-                                            <div class="input-group">
-                                                <input type="text" class="form-control" placeholder="Cari.."
-                                                    name="search" autocomplete="off">
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="col">
-                                        <div class="pagination justify-content-end mb-0"
-                                            data-pages="<?= $this->data['pages']; ?>">
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tfoot>
                 </table>
+            </div>
+            <div class="card-footer">
+                <div class="row align-items-center gap-y-3">
+                    <div class="col-12 col-md-6">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Cari.." name="search"
+                                autocomplete="off">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="pagination justify-content-center justify-content-md-end mb-0"
+                            data-pages="<?= $this->data['pages']; ?>">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
