--- a/app/views/admin/donatur/cre.html
+++ b/app/views/admin/donatur/cre.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col">
+    <div class="col-12 col-md-6">
         <div class="card card-stats">
             <!-- Card body -->
             <div class="card-body">
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-    <div class="col">
+    <div class="col-12 col-md-6">
         <div class="card card-stats">
             <!-- Card body -->
             <div class="card-body">
