--- a/app/views/donatur/home/index.html
+++ b/app/views/donatur/home/index.html
@@ -167,16 +167,16 @@
                 </table>
             </div>
             <div class="card-footer py-4">
-                <div class="row align-items-center">
-                    <div class="col">
+                <div class="row align-items-center gap-y-3">
+                    <div class="col-12 col-md-6">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Cari.." name="search"
                                 autocomplete="off" <?=(isset($data['search']) ? 'value="' . $data['search'] . '"' : '' )
                                 ?>>
                         </div>
                     </div>
-                    <div class="col">
-                        <ul class="pagination pagination-sm justify-content-end mb-0"
+                    <div class="col-12 col-md-6">
+                        <ul class="pagination pagination-sm justify-content-center justify-content-md-end mb-0"
                             data-pages="<?= $this->data['pages']; ?>">
                         </ul>
                     </div>
